--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
             <div class="modal-body">
                 <div class="row">
-                    <img class="img-responsive login-logo" src="img/logo.png">
+                    <img class="img-responsive login-logo" src="./img/logo.png">
                 </div>
                 <form role="form" ng-submit="login()">
                     <fieldset>
