--- a/modules/Setup/module.html
+++ b/modules/Setup/module.html
@@ -8,7 +8,7 @@
         <div class="modal-dialog" data-keyboard="false">
             <div class="modal-content">
                 <div class="modal-body">
-                    <img src="../../img/logo.png" class="img-responsive center-block" alt="Pineapple Logo">
+                    <img src="../../../img/logo.png" class="img-responsive center-block" alt="Pineapple Logo">
                     <span class="text-center">
                         <h1>Welcome</h1>
                     </span>
